--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-  "name": "iods/core",
-  "description": "Core/base module for M2 extension builds.",
+  "name": "iods/module-customer",
+  "description": "Improvements to the customer entity in Magento, specifically attribution.",
   "type": "magento2-module",
   "license": [
     "MIT"
   ],
   "require": {
-    "php": "~7.0.0|~7.1.0|~7.2.0"
+    "php": "~7.0.0 || ~7.4.0"
   },
   "autoload": {
     "files": [
       "registration.php"
     ],
     "psr-4": {
-      "Darkstar\\Core\\": ""
+      "Iods\\Customer\\": "src"
     }
   },
-  "version": "0.1.1"
+  "version": "0.2.1"
 }
